First column ready.

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Yatra+One&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="page-columns">
+    <div class="page-columns" id="first-column">
         <div class="image-sidebar">
-            <img src="cat-ge7cca82e0_640.jpg" alt="cat-logo">
+            <img src="animal-g90364c807_640.png" alt="cat-logo" height="80" width="80">
             <h1>CATS</h1>
         </div>
     </div>
-    <div class="page-columns">
+    <div class="page-columns" id="second-column">
         <section class="head-section">
             <p class="head-text">This is not a real online service!</p>
             <p class="head-text">Sign up to know more about cats.</p>
