Added CSS style

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1>CATS</h1>
         </div>
     </div>
-    <div class="page-columns" id="second-column">
+    <div class="page-columns second-column" id="second-column">
         <section class="head-section">
             <p class="head-text">This is not a real online service!</p>
             <p class="head-text">Sign up to know more about cats.</p>
