Rearranged and styled the form fields.

--- a/index.html
+++ b/index.html
@@ -28,41 +28,41 @@
                 <div class="heading">
                     <h1>Thanks for registering.</h1>
                 </div>
-                <fieldset>
+                <div class="form-field">
                     <div class='form-row'>
-                        <label for='name'>*First Name</label>
+                        <label for='name'>*First Name</label><br>
                         <input id='name' name='name' type='text'required />
                     </div>
                     <div class='form-row'>
-                        <label for='last-name'>*Last Name</label>
+                        <label for='last-name'>*Last Name</label><br>
                         <input id='last-name' name='last-name' type='text'required />
                     </div>
                     
                     <div class='form-row'>
-                        <label for='email'>*Email</label>
+                        <label for='email'>*Email</label><br>
                         <input id='email' name='email' type='email' placeholder='joe@example.com'required/>
                     </div>
 
                     <div class='form-row'>
-                        <label for='phone'>*Phone Number</label>
+                        <label for='phone'>*Phone Number</label><br>
                         <input id='phone' name='phone' type='number' placeholder='555 555 555'required/>
                     </div>
 
                     <div class='form-row'>
-                        <label for='password'>*Password</label>
+                        <label for='password'>*Password</label><br>
                         <input id='password' name='password' type='password' required/>
                     </div>
 
                     <div class='form-row'>
-                        <label for='confirm-password'>*Confirm Password</label>
+                        <label for='confirm-password'>*Confirm Password</label><br>
                         <input id='confirm-password' name='confirm-password' type='password'required/>
                     </div>
-                </fieldset>
+                </div>
                 <div class='form-row'>
                     <button>Create Account</button>
                 </div>
             </form>
-            <p class="login-text">Already have an account?<link rel="stylesheet" href="url">Log in</a></p>
+            <p class="login-text">Already have an account? <a href="#">Log in</a></p>
         </section>
         
     </div>
