--- a/index.html
+++ b/index.html
@@ -30,31 +30,31 @@
                 </div>
                 <div class="form-field">
                     <div class='form-row'>
-                        <label for='name'>*First Name</label><br>
+                        <label for='name'>First Name</label><br>
                         <input id='name' name='name' type='text'required />
                     </div>
                     <div class='form-row'>
-                        <label for='last-name'>*Last Name</label><br>
+                        <label for='last-name'>Last Name</label><br>
                         <input id='last-name' name='last-name' type='text'required />
                     </div>
                     
                     <div class='form-row'>
-                        <label for='email'>*Email</label><br>
+                        <label for='email'>Email</label><br>
                         <input id='email' name='email' type='email' placeholder='joe@example.com'required/>
                     </div>
 
                     <div class='form-row'>
-                        <label for='phone'>*Phone Number</label><br>
+                        <label for='phone'>Phone Number</label><br>
                         <input id='phone' name='phone' type='number' placeholder='555 555 555'required/>
                     </div>
 
                     <div class='form-row'>
-                        <label for='password'>*Password</label><br>
+                        <label for='password'>Password</label><br>
                         <input id='password' name='password' type='password' required/>
                     </div>
 
                     <div class='form-row'>
-                        <label for='confirm-password'>*Confirm Password</label><br>
+                        <label for='confirm-password'>Confirm Password</label><br>
                         <input id='confirm-password' name='confirm-password' type='password'required/>
                     </div>
                 </div>
